# art-voice-agent-accelerator

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  Makefile  README.md  azure.yaml  pyproject.toml
.github/: copilot-instructions.md
.github/instructions/: system-architecture.instructions.md
.github/skills/: README.md
.github/workflows/: _template-deploy-azd.yml  test-evaluation-framework.yml
apps/cardapi/: .dockerignore  Dockerfile.backend  Dockerfile.mcp  QUICKSTART.md  README.md  start.sh  stop.sh  test_api.py
apps/cardapi/mcp_app/: CARDAPI_MCP_UPDATES.md  __init__.py  pyproject.toml  requirements.txt  service.py
docs/: mkdocs.yml
docs/architecture/: speech-synthesis.md
docs/getting-started/: README.md  configuration.md  local-development.md  prerequisites.md
infra/: README.md
infra/terraform/: ai-services.tf.back  appconfig.tf  cardapi.tf  communication.tf  containers.tf  core.tf  data.tf  keyvault.tf  main.tf  outputs.tf  redis.tf  variables.tf
src/acs/: acs_helper.py
src/aoai/: client.py  manager.py
src/cosmosdb/: manager.py
src/enums/: monitoring.py
src/pools/: warmable_pool.py
src/speech/: speech_recognizer.py  text_to_speech.py
src/stateful/: state_managment.py
src/tools/: latency_tool_compat.py  latency_tool_v2.py  (+2 more)
tests/: test_aoai_manager_invocation.py  test_cascade_llm_processing.py  test_cascade_orchestrator_entry_points.py  test_dtmf_processor.py  test_handoff_orchestrator_states.py  test_mcp_api.py  test_mcp_client.py  test_voice_handler_compat.py
utils/: ml_logging.py  telemetry_config.py
(+168 files in other folders)
