[project]
name = "cardapi-mcp-server"
version = "0.1.0"
description = "MCP Server for Card Decline Code Lookup"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.2",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.1",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-sdk>=1.37.0",
    "azure-monitor-opentelemetry>=1.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []
